fix poster bottom padding on mobile

--- a/src/app/components/now/feed-posters/feed-posters.component.scss
+++ b/src/app/components/now/feed-posters/feed-posters.component.scss
@@ -22,6 +22,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding-bottom: 10px;
 }
 
 .feed-item-poster a {
